--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Relay Chess game server",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "co": "^4.6.0",
     "express": "^4.16.3",
     "glicko2-lite": "^1.0.1",
     "mongodb": "^2.2.9",
+    "simple-oauth2": "^1.5.2",
     "socket.io": "^1.4.8",
     "underscore": "^1.8.3"
   },
