--- a/web/package.json
+++ b/web/package.json
@@ -2,9 +2,22 @@
   "name": "relaychess-frontend",
   "version": "0.9.0",
   "private": true,
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "angular": "^1.7.1",
+    "angular-modal-service": "^0.13.0",
+    "angular-route": "^1.7.1",
+    "ngstorage": "^0.3.11"
   },
-  "scripts": {
-  }
+  "devDependencies": {
+    "copy-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^3.2.0",
+    "rimraf": "^2.6.2",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
+    "webpack-dev-server": "^3.1.4"
+  },
+    "scripts": {
+        "build": "rimraf dist && webpack --bail --progress --profile",
+        "start": "webpack-dev-server --history-api-fallback --inline --progress"
+    }
 }
