--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,14 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.1",
     "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.1.4"
   },
-    "scripts": {
-        "build": "rimraf dist && webpack --bail --progress --profile",
-        "start": "webpack-dev-server --history-api-fallback --inline --progress"
-    }
+  "scripts": {
+    "build": "rimraf dist && webpack --bail --progress --profile",
+    "start": "webpack-dev-server --history-api-fallback --inline --progress"
+  }
 }
