--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
     "angular": "^1.7.1",
     "angular-modal-service": "^0.13.0",
     "angular-route": "^1.7.1",
+    "chessground": "^7.3.2",
     "ngstorage": "^0.3.11",
     "socket.io-client": "^2.1.1"
   },
