--- a/web/package.json
+++ b/web/package.json
@@ -12,16 +12,17 @@
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   },
   "scripts": {
-    "build": "rimraf dist && webpack --bail --progress --profile",
-    "start": "webpack-dev-server --history-api-fallback --inline --progress"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   }
 }
